--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>This is User Profile Page</h1>
+    <div th:if="${loggedInUser}">
+        <h1 data-th-text="${loggedInUser.name}"></h1>
+        <h1 data-th-text="${loggedInUser.email}"></h1>
+        <h1>User is Logged In</h1>
+    </div>
+    
 </body>
 </html>
