--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -28,14 +28,19 @@
                 This contact will be stored on cloud, you can direct email this
                 client from KontaX...
               </p>
-              <form class="mt-8">
-                <!-- name form -->
-                <div class="mb-3">
-                  <label
-                    for="input-group-1"
-                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >Contact Name</label
-                  >
+              <form 
+              action=""
+              class="mt-8"
+              data-th-action="@{'/user/contacts/add'}"
+              data-th-object="${contactForm}"
+              method="POST">
+              <!-- name form -->
+              <div class="mb-3">
+                <label
+                  for="input-group-1"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                  >Contact Name</label
+                >
                   <div class="relative mb-1">
                     <div
                       class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none"
@@ -44,8 +49,9 @@
                     </div>
                     <input 
                       type="text"
+                      data-th-field="*{name}"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                      placeholder="Enter the name"
+                      placeholder="Enter the Name"
                     />
                   </div>
                 </div>
@@ -65,6 +71,7 @@
                     </div>
                     <input
                       type="text"
+                      data-th-field="*{email}"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="example@gmail.com"
                     />
@@ -85,7 +92,7 @@
                       <i class="fa-solid w-4 h-4 fa-phone"></i>
                     </div>
                     <input
-
+                      data-th-field="*{phoneNumber}"
                       type="text"
                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                       placeholder="XXXXXXXXXX"
@@ -102,6 +109,7 @@
                     >Contact Address</label
                   >
                   <textarea
+                    data-th-field="*{address}"
                     rows="4"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     placeholder="Address of the contact"
@@ -117,6 +125,7 @@
                     >Contact Description</label
                   >
                   <textarea
+                    data-th-field="*{description}"
                     rows="4"
                     class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     placeholder="Write about your contact"
@@ -135,6 +144,7 @@
                           <i class="fa-solid w-4 h-4 fa-earth-americas"></i>
                         </div>
                         <input
+                        data-th-field="*{websiteLink}"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                           placeholder="http://UserPortfolio.com/"
                         />
@@ -151,6 +161,7 @@
                           <i class="fa-brands w-4 h-4 fa-linkedin"></i>
                         </div>
                         <input
+                        data-th-field="*{linkedlnLink}"
                           type="text"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                           placeholder="http://UserLinkedln.com/"
@@ -184,6 +195,7 @@
 
                 <div class="flex items-center mb-3">
                   <input
+                  data-th-field="*{favourite}"
                     type="checkbox"
                     class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
                   />
