--- a/src/main/resources/templates/user/add_contact.html
+++ b/src/main/resources/templates/user/add_contact.html
@@ -34,7 +34,8 @@
               class="mt-8"
               data-th-action="@{'/user/contacts/add'}"
               data-th-object="${contactForm}"
-              method="POST">
+              method="POST"
+              enctype="multipart/form-data">
               <!-- name form -->
               <div class="mb-3">
                 <label
@@ -210,6 +211,7 @@
                   <input
                     id="image_file_input"
                     class="block w-full mb-2 text-xs text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+                    data-th-field="*{contactImage}"
                     type="file"
                   />
                   <img
@@ -256,7 +258,7 @@
       </div>
     </div>
 
-    <!-- <script data-th-src="@{'/js/admin.js'}"></script> -->
+    <script data-th-src="@{'/js/admin.js'}"></script>
     <script>
       console.log("this is profile page");
     </script>
