--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -51,7 +51,7 @@
     <!-- <footer class="p-4">Footer: Learn Code With Durgesh</footer> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{'/js/script.js'}"></script>
   <th:block th:if="${script != null}" th:replace="${script}"></th:block>
   </body>
