--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -30,7 +30,7 @@
                 action=""
                 
               >
-                <div
+                <!-- <div
                   class="flex space-x-3 p-5 items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4"
                 >
 
@@ -81,10 +81,10 @@
                   >
                     Search
                   </button>
-                </div>
+                </div> -->
               </form>
 
-              <div>
+              <!-- <div>
                 <button
                   type="button"
                   onclick="exportData()"
@@ -92,7 +92,7 @@
                 >
                   Export
                 </button>
-              </div>
+              </div> -->
             </div>
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
               <!-- <div data-th-replace="~{message :: messagebox}"></div> -->
@@ -114,7 +114,7 @@
                 <tbody>
                   <tr
                     data-th-object="${c}"
-                    data-th-each="c  : ${contacts}"
+                    data-th-each="c  : ${pageContact.getContent()}"
                     class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
                   >
                     <th
@@ -186,7 +186,7 @@
               </table>
 
               <!-- pagination component  -->
-              <!-- <div
+              <div
                 data-th-if="${pageContact.totalElements>0}"
                 class="pagination_container bg-white dark:bg-gray-800 p-5 text-center"
               >
@@ -229,11 +229,11 @@
                 data-th-if="${pageContact.totalElements<=0}"
               >
                 No result found
-              </h1> -->
+              </h1>
             </div>
           </div>
         </div>
-        <div data-th-replace="~{ user/contact_modals :: contact}"></div>
+        <!-- <div data-th-replace="~{ user/contact_modals :: contact}"></div> -->
       </div>
     </div>
 
