--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -154,9 +154,11 @@
                         <i class="fa-solid w-6 h-6 fa-trash"></i>
                       </a>
                       <a href=""> <i class="fa-solid w-6 h-6 fa-pen"></i></a>
-                      <button>
-                        <i class="fa-solid fa-eye"></i>
-                      </button>
+                      <button  
+                          th:onclick="loadContactdata([[${c.id}]])"
+                          >
+                          <i class="fa-solid fa-eye"></i>
+                        </button>
                     </div>
                   </td>
                 </tr>
@@ -211,11 +213,11 @@
             </h1>
           </div>
         </div>
-        <!-- <div data-th-replace="~{user/contact_modals :: contact}"></div> -->
+        <div data-th-replace="~{user/contact_modals :: contact}"></div>
       </div>
     </div>
 
-    <!-- <script data-th-src="@{'/js/contacts.js'}"></script> -->
+    <script data-th-src="@{'/js/contacts.js'}"></script>
 
     <script>
       console.log("this is profile page");
