--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -150,9 +150,9 @@
                   </td>
                   <td class="px-6 py-4">
                     <div>
-                      <a href="">
+                      <button th:onclick="deleteContact([[${c.id}]])">
                         <i class="fa-solid w-6 h-6 fa-trash"></i>
-                      </a>
+                      </button>
                       <a href=""> <i class="fa-solid w-6 h-6 fa-pen"></i></a>
                       <button  
                           th:onclick="loadContactdata([[${c.id}]])"
