Completed Update Contact Functionality and Logout Debug

--- a/src/main/resources/templates/user/update_contact_view.html
+++ b/src/main/resources/templates/user/update_contact_view.html
@@ -174,7 +174,7 @@
                         <input
                           data-th-field="*{websiteLink}"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                          placeholder="htt://learncodewithdurgesh.com/"
+                          placeholder="http://UserPortfolio.com/"
                         />
                       </div>
                     </div>
@@ -190,9 +190,9 @@
                         </div>
                         <input
                           type="text"
-                          data-th-field="*{linkedInLink}"
+                         data-th-field="*{linkedlnLink}"
                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                          placeholder="htt://learncodewithdurgesh.com/"
+                           placeholder="http://UserLinkedln.com/"
                         />
                       </div>
                     </div>
