--- a/src/main/resources/templates/user/sidebar.html
+++ b/src/main/resources/templates/user/sidebar.html
@@ -116,7 +116,7 @@
       </li>
       <li>
         <a
-          href="#"
+          th:href="@{/do-logout}"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
         >
           <svg
