--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -103,6 +103,12 @@
               </div>
             </form>
 
+            <div class="text-center mt-5">
+              <p class="text-gray-500">Don't have an account? 
+                <a  data-th-href="@{'/register'}" class="text-blue-600 hover:underline">Create new Account</a>
+              </p>
+            </div>
+
              <div
               class="social-buttons-container flex justify-center items-center flex-col space-y-4 mt-10"
             >
