--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -163,6 +163,12 @@
                 </button>
               </div>
             </form>
+
+            <div class="text-center mt-5"></div>
+              <p class="text-gray-500">Already have an account? 
+                <a href="#" data-th-href="@{'/login'}" class="text-blue-600 hover:underline">Login here</a>
+              </p>
+            </div>
           </div>
         </div>
       </div>
